--- a/platformio.ini
+++ b/platformio.ini
@@ -6,7 +6,7 @@
 ;   Advanced options: extra scripting
 ;
 ; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
+; https://docs.platformio.org/page/projectconf.html 
 
 [env:nodemcu-32s]
 platform = espressif32
@@ -17,3 +17,6 @@ lib_deps =
 	jrowberg/I2Cdevlib-HMC5883L@^1.0.0
 	madhephaestus/ESP32Servo@^1.1.2
 	pololu/VL53L0X@^1.3.1
+	adafruit/Adafruit BMP085 Library@^1.2.4
+	SPI @ ^2.0.0
+	
