--- a/platformio.ini
+++ b/platformio.ini
@@ -6,7 +6,7 @@
 ;   Advanced options: extra scripting
 ;
 ; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html 
+; https://docs.platformio.org/page/projectconf.html
 
 [env:nodemcu-32s]
 platform = espressif32
@@ -19,4 +19,4 @@ lib_deps =
 	pololu/VL53L0X@^1.3.1
 	adafruit/Adafruit BMP085 Library@^1.2.4
 	SPI @ ^2.0.0
-	
+	hideakitai/ArduinoEigen@^0.3.2
