--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:nodemcu-32s]
 platform = espressif32
-board = esp32-c3-devkitm-1
+board = denky32
 framework = arduino
 lib_deps = 
 	madhephaestus/ESP32Servo@^1.1.2
