Made cpp version of mpc

--- a/.mpc_test/cpp/makefile
+++ b/.mpc_test/cpp/makefile
@@ -1,24 +1,38 @@
 # Compiler
 CC := g++
 # Compiler flags
-CFLAGS := -O3#-Wall
+CFLAGS := -Os#-Wall
 # Include directories 
 INCLUDE := -I ./lib
 # Source files
-SRCS := main.cpp droneModel.cpp
+SRCS := main.cpp droneModel.cpp ipmmpc.cpp
 # Object files
 OBJS := $(SRCS:.cpp=.o)
+# Object files for shared library
+LIBOBJS := ipmmpc.o droneModel.o
 # Dependency files
 DEPS := $(SRCS:.cpp=.d)
 # Executable name
 TARGET := main
+# Shared library name
+LIBRARY := libipmmpc.dll
+
+# Rule to build the executable and shared library
+all: $(LIBRARY) $(TARGET)
+
+# Rule to build the shared library
+$(LIBRARY): $(LIBOBJS)
+	@echo "Building shared library $@ from $^"
+	$(CC) $(CFLAGS) $(INCLUDE) -shared -o $@ $^
 
 # Rule to build the executable
 $(TARGET): $(OBJS)
+	@echo "Building executable $@ from $^"
 	$(CC) $(CFLAGS) $(INCLUDE) $^ -o $@
 
 # Rule to compile source files
 %.o: %.cpp
+	@echo "Compiling $<"
 	$(CC) $(CFLAGS) $(INCLUDE) -c $< -o $@
 
 # Include dependency files
@@ -26,6 +40,7 @@ $(TARGET): $(OBJS)
 
 # Rule to generate dependency files
 %.d: %.cpp
+	@echo "Generating dependencies for $<"
 	@$(CC) -MM $(CFLAGS) $(INCLUDE) $< > $@
 
 # Rule to clean object and dependency files
@@ -34,6 +49,6 @@ clean:
 
 # Rule to clean all generated files
 cleanall: clean
-	rm -f $(TARGET)
+	rm -f $(TARGET) $(LIBRARY)
 
 .PHONY: clean cleanall
