--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	madhephaestus/ESP32Servo@^1.1.2
 	pololu/VL53L0X@^1.3.1
 	hideakitai/ArduinoEigen@^0.3.2
+	sparkfun/SparkFun MPU-9250 9 DOF IMU Breakout@^1.0.2
