--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = denky32
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
 	madhephaestus/ESP32Servo@^1.1.2
 	pololu/VL53L0X@^1.3.1
