--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = espressif32
 board = esp32-c3-devkitm-1
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
 	madhephaestus/ESP32Servo@^1.1.2
-	pololu/VL53L0X@^1.3.1
 	hideakitai/ArduinoEigen@^0.3.2
